#4 more and more tests